refactor: convert Intelligence to record and unify pipeline signatures
- Change Intelligence from class to record for Java 24 readiness.
- Update ScenarioProcessingPipeline and GenerateCommand to handle filePath.
- Prepare for AST-based component detection.